syntax = "proto3";
option go_package = "./;main";

message ExternalMessage {
  int32 d = 1;
}

message ExternalRequest {
  string content = 1;
}

message ExternalResponse {
  string result = 2;
}
